--- a/htmlFiles/index.html
+++ b/htmlFiles/index.html
@@ -6,10 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User API Homepage</title>
+
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-    <h1>TEST!!!!</h1>
+    <div class="container">
+        <h1>UserAPI school project - DOCS</h1>
+        <div class="request">
+            <div class="subheadingContainer">
+                <h2 class="requestHeading">GET</h2>
+                <h2 class="nameHeading">Get User</h2>
+            </div>
+            <p class="endpoint">http://localhost:3000/user</p>
+        </div>
+        
+        <div class="request">
+            <div class="subheadingContainer">
+                <h2 class="requestHeading">POST</h2>
+                <h2 class="nameHeading">Create User</h2>
+            </div>
+            <p class="endpoint">http://localhost:3000/user</p>
+            <div class="formdataContainer">
+                <div class="formdataHeading">
+                    <h2 class="body">Body</h2>
+                    <h2 class="formdataHeadingType">form-data</h2>
+                </div>
+                <div class="dataContainer">
+                    <div class="dataWrapper">
+                        <p class="dataName">name</p>
+                        <p class="dataValue">Theis Bo Nielsen</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
